<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home_screen">

    <fragment
        android:id="@+id/start_screen"
        android:name="com.example.kidsindata_spaceinvader.ui.start_screen.StartScreenFragment"
        android:label="@string/title_start_screen"
        tools:layout="@layout/fragment_start_screen" />

    <fragment
        android:id="@+id/fragment_home_screen"
        android:name="com.example.kidsindata_spaceinvader.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_fragment_home_screen_to_navigation_data_journey"
            app:destination="@id/navigation_data_journey" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.kidsindata_spaceinvader.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_trophies"
        android:name="com.example.kidsindata_spaceinvader.ui.trophies.TrophiesFragment"
        android:label="@string/title_trophies"
        tools:layout="@layout/fragment_trophies" />

    <fragment
        android:id="@+id/navigation_data_journey"
        android:name="com.example.kidsindata_spaceinvader.ui.data_journey.DataJourneyFragment"
        android:label="@string/title_data_journey"
        tools:layout="@layout/fragment_trophies"/>

</navigation>